fix dropdown thing clipped

--- a/src/css/containers/DashboardClubs.css
+++ b/src/css/containers/DashboardClubs.css
@@ -47,7 +47,7 @@
 
 .dashboard-clubs-umbrellas-list {
     width: 135px;
-    height: 65vh;
+    height: 60vh;
     border-radius: 3px;
     box-shadow: 0 0 3px 1px rgba(215, 215, 225, 0.56);
 }
